--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@astrojs/tailwind": "^3.1.2",
     "astro": "^2.3.2",
     "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
